html  title changed

--- a/justtest.html
+++ b/justtest.html
@@ -11,7 +11,7 @@
     <!-- fevicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <title>Cash4Kit Title</title>
+    <title>Cash4Kit Title changed</title>
 </head>
 
 <body id="page-top" data-spy="scroll">
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row text-center ">
                 <div class="col-sm-12">
-                    <h2 class="text-primary text-capitalize">Fast cash for your kit</h2>
+                    <h2 class="text-primary text-capitalize">This is changed</h2>
                     <hr class="style-eight">
                 </div>
             </div>
